# FoxGHI

./: .gitignore  CMakeLists.txt  FXGHI.bmarks  FXGHI.cbp  FXGHI.cbp.save  FXGHI.depend  FXGHI.layout  FXGHI.mk  FXGHI.project  FXGHI.txt  FXGHI.workspace  FXGHI_build_log.html  Makefile  README  README.md  README_CS.txt  README_EN.txt  REDME  REDME.CS  compile_flags.txt  foxghi.conf.in  version.data  version.h.in
doc/: lgpl-3.cs.shtml
doc/FIXME/: 001.txt
include/: ControlPanel.h  Core.h  FXGDialogBox.h  FXGHI_defs.h  FXGWindow.h  FXGWindow.h.save  FXHeaderBox.h  FXMainPrimaryWindow.h  FXPrimaryWindow.h  FXSecondaryWindow.h  FXWindowController.h  FXWindowHeader.h  HeaderBox.h  Widgets.h  Windows.h  fxghi.h  fxghi_defs.h  icons.h  version.h
include/Core/: defs.h  icons.h
include/Widgets/: ControlPanel.h  FXHeaderBox.h  FXWindowController.h  FXWindowHeader.h
include/Windows/: FXDesktopWidget.h  FXPrimaryWindow.h
src/: ControlPanel.cpp  FXGDialogBox.cpp  FXGWindow.cpp  FXHeaderBox.cpp  FXMainPrimaryWindow.cpp  FXPrimaryWindow.cpp  FXSecondaryWindow.cpp  FXWindowController.cpp  FXWindowHeader.cpp  FXWindowHeader.cpp.save  HeaderBox.cpp  foxghi0.3.conf  foxghi0.4.conf
src/Widgets/: ControlPanel.cpp  FXHeaderBox.cpp  FXWindowController.cpp  FXWindowHeader.cpp
src/Windows/: FXDesktopWidget.cpp  FXPrimaryWindow.cpp  FXSecondaryWindow.cpp
tests/: ImageView.cpp.save
tests/FoxGHICP/: cp.cpp  cp.h  icons.cpp  icons.h  main.cpp
tests/ImageViewer/: main.cpp
tests/SimpleDesktopWidget/: CMakeLists.txt  main.cpp
tests/SimpleWindow/: CMakeLists.txt  main.cpp
utils/FoxGHICP/: CMakeLists.txt  cp.cpp  cp.h  main.cpp
