CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
PROJECT( SimpleDesktopWidget VERSION 1.0 DESCRIPTION "Example simple Desktop Widget with FoxGHI" )

FILE( GLOB SOURCES *.cpp )
#INCLUDE_DIRECTORIES( "." )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} X11 FOX-1.7 FXGHI )

