CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
PROJECT( FoxGHICP VERSION 0.1 DESCRIPTION "Control Panel for FoxGHI" )

FILE( GLOB SOURCES *.cpp )
INCLUDE_DIRECTORIES( "." )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} X11 FOX-1.7 FXGHI )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION bin/ )
